--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -50,7 +50,19 @@
             <li>
                 <!-- Sharingbutton Facebook -->
                 <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=${current_url}" target="_blank" rel="noopener">
-                    <i class="far fa-facebook-f"><</i>Facebook
+                    <i class="fab fa-facebook-f"></i>&nbsp;&nbsp;Facebook
+                </a>
+            </li>
+            <li>
+                 <!-- Sharingbutton Twitter -->
+                <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?url=${current_url}" target="_blank" rel="noopener">
+                    <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
+                </a>
+            </li>
+            <li>
+                <!-- Sharingbutton E-Mail -->
+                <a class="resp-sharing-button__link" href="mailto:someone@gmail.com?subject=${sharing_subject}&body=${current_url}" target="_self" rel="noopener">
+                    <i class="far fa-envelope"></i>&nbsp;&nbsp;Mail
                 </a>
             </li>
         </ul>
