--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -7,43 +7,78 @@
         <i class="fa fa-play fa-rotate-180"></i>
         ${'user.logout' & t}
     </a>
-    <help topic="introduction" position="bottom" style="margin:0;padding:0;border-right:1px solid gray;" if.bind="theme.width > 498">
+    <help topic="introduction" position="bottom" style="margin:0;padding:0;" if.bind="theme.width > 498">
     </help>
-    <div class="btn-group dropdown border-right hide-if-small" style="padding:0;margin-right:18px;" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
-        <button class="btn btn-link btn-md dropdown-toggle" t="[title]user.font-size" style="text-decoration:none;position:relative"
-            aubs-dropdown-toggle>
-            <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' & t}</span>
-            <span style="position:absolute;left:13px;top:0px" class="font-size-100">${'a' & t}</span>
-            <span style="position:absolute;left:36px;top:10px;"class="caret"></span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-left">
-            <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' & t}</a></li>
-            <li class="font-size-110"><a class="dropdown-item" href="#" click.trigger="set_font_size(110)">${'abcde' & t}</a></li>
-            <li class="font-size-120"><a class="dropdown-item" href="#" click.trigger="set_font_size(120)">${'abcde' & t}</a></li>
-            <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' & t}</a></li>
-            <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' & t}</a></li>
-            <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' & t}</a></li>
-            <li class="font-size-180"><a class="dropdown-item" href="#" click.trigger="set_font_size(180)">${'abcde' & t}</a></li>
-        </ul>
-    </div>
 
     <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.width>458" >
-        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="far fa-lg fa-globe"></i>
+        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle t="[title]user.personalize" >
+            <i class="fas fa-user-cog"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
-            <li repeat.for="locale of locales">
-                <a class="dropdown-item" href="#" click.trigger="change_locale(locale)">
-                    ${'locales.' + locale & t}
-                </a>
+            <li style="border-bottom:solid 1px gray;width:170px;margin-bottom:8px;padding-top:6px;">
+                <div class="btn-group dropdown border-right hide-if-small" style="padding:0;margin-right:18px;" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)">
+                    <button class="btn btn-link btn-md dropdown-toggle" style="text-decoration:none;position:relative;margin-bottom:10px;"
+                        aubs-dropdown-toggle>
+                        <span style="position:absolute;left:20px;top:-8px;" class="font-size-150">${'a' & t}</span>
+                        <span style="position:absolute;left:13px;top:0px" class="font-size-100">${'a' & t}</span>
+                        <span style="position:absolute; left:40px;top:0px;">${'user.font-size' & t}</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-left">
+                        <li class="font-size-100"><a class="dropdown-item" href="#" click.trigger="set_font_size(100)">${'abcde' & t}</a></li>
+                        <li class="font-size-110"><a class="dropdown-item" href="#" click.trigger="set_font_size(110)">${'abcde' & t}</a></li>
+                        <li class="font-size-120"><a class="dropdown-item" href="#" click.trigger="set_font_size(120)">${'abcde' & t}</a></li>
+                        <li class="font-size-130"><a class="dropdown-item" href="#" click.trigger="set_font_size(130)">${'abcde' & t}</a></li>
+                        <li class="font-size-140"><a class="dropdown-item" href="#" click.trigger="set_font_size(140)">${'abcde' & t}</a></li>
+                        <li class="font-size-150"><a class="dropdown-item" href="#" click.trigger="set_font_size(150)">${'abcde' & t}</a></li>
+                        <li class="font-size-180"><a class="dropdown-item" href="#" click.trigger="set_font_size(180)">${'abcde' & t}</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li style="border-bottom:solid 1px gray;width:170px;padding-bottom:5px;">
+                <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.width>458" >
+                    <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
+                        <i class="far fa-lg fa-globe" style="margin-left:10px;"></i>
+                        <span style="position:absolute; left:40px;top:0px;">${'user.select-language' & t}</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
+                        <li repeat.for="locale of locales">
+                            <a class="dropdown-item" href="#" click.trigger="change_locale(locale)">
+                                ${'locales.' + locale & t}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li style="width:170px;padding-bottom:4px;padding-top:6px;">
+                <div class="btn-group dropdown border-right hide-if-small" 
+                    aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" 
+                    if.bind="true || user.privileges.DEVELOPER">
+                    <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
+                        <i class="far fa-tint" style="margin-left:12px;"></i>
+                        <span style="position:absolute; left:40px;top:0px;">${'user.select-colors' & t}</span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-left palette-selector" >
+                        <li repeat.for="palette of theme.palettes" class="${palette}" style="height:24px;">
+                            <a class="dropdown-item" href="#" click.trigger="change_palette(palette)" css="float:${theme.same_dir};">
+                                ${'palettes.' + palette & t}
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#" click.trigger="toggle_logo()" css="float:${theme.same_dir}">
+                                <img if.bind="! theme.blue_logo" src="${theme.files.gb_logo_blue}" width="20" />
+                                <img if.bind="theme.blue_logo" src="${theme.files.gb_logo_png}" width="20" />
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </div>
 
     <div class="btn-group dropdown border-right" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="theme.width>458" >
-        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="far fa-lg fa-share-alt"></i>
+        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle t="[title]user.sharing">
+            <i class="fas fa-share-alt"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
@@ -68,45 +103,19 @@
         </ul>
     </div>
 
-    <div class="btn-group dropdown border-right hide-if-small" 
-        aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" 
-        t="[title]palettes.select-colors"
-        if.bind="true || user.privileges.DEVELOPER">
-        <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="far fa-tint"></i>
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-left palette-selector" >
-            <li repeat.for="palette of theme.palettes" class="${palette}" style="height:24px;">
-                <a class="dropdown-item" href="#" click.trigger="change_palette(palette)" css="float:${theme.same_dir};">
-                    ${'palettes.' + palette & t}
-                </a>
-            </li>
-            <li>
-                <a class="dropdown-item" href="#" click.trigger="toggle_logo()" css="float:${theme.same_dir}">
-                    <img if.bind="! theme.blue_logo" src="${theme.files.gb_logo_blue}" width="20" />
-                    <img if.bind="theme.blue_logo" src="${theme.files.gb_logo_png}" width="20" />
-                </a>
-            </li>
-        </ul>
-    </div>
 
     <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" title="${user.editing ? 'user.no-edit' : 'user.can-edit' & t}"
         class="border-right ${user.editing ? 'highlight' : ''}" style="border-left:1px solid gray;padding-left:10px;">
-        <i class="far fa-lg ${user.editing ? 'fa-eye highlight' : 'fa-pencil' }"></i>
+        <i class="fas ${user.editing ? 'fa-eye highlight' : 'fa-pencil' }"></i>
     </a>
 
     <a if.bind="user.privileges.CHATTER" href click.trigger="chat_rooms()" t="[title]user.chat-rooms" class="border-right">
-        <i class="far fa-lg fa-comments"></i>
-    </a>
-
-    <a if.bind="false" href click.delegate="share()" t="[title]user.share" class="border-right">
-        <i class="far fa-link"></i>
+        <i class="fas fa-comments"></i>
     </a>
 
     <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
-            <i class="far fa-lg fa-cog"></i>
+            <i class="fas fa-cog"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left">
