--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -90,7 +90,8 @@
             </li>
             <li>
                  <!-- Sharingbutton Twitter -->
-                <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?url=${current_url}" target="_blank" rel="noopener">
+                 <a class="resp-sharing-button__link" 
+                    href="https://twitter.com/intent/tweet/?text=Share ${current_url}&url=${current_url}" target="_blank" rel="noopener">
                     <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
                 </a>
             </li>
