--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -91,7 +91,7 @@
             <li>
                  <!-- Sharingbutton Twitter -->
                  <a class="resp-sharing-button__link" 
-                    href="https://twitter.com/intent/tweet/?text=Share ${current_url}&url=${current_url}" target="_blank" rel="noopener">
+                    href="https://twitter.com/intent/tweet/?text=${sharing_subject}%0A%0D${current_url}" target="_blank" rel="noopener">
                     <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
                 </a>
             </li>
