--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -82,14 +82,14 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
-            <li>
+            <li style="border-bottom:solid 1px gray;">
                 <!-- Sharingbutton Facebook -->
                 <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=${current_url}" target="_blank" rel="noopener">
                     <i class="fab fa-facebook-f"></i>&nbsp;&nbsp;Facebook
                 </a>
             </li>
-            <li>
-                 <!-- Sharingbutton Twitter -->
+            <li style="border-bottom:solid 1px gray;">
+                    <!-- Sharingbutton Twitter -->
                  <a class="resp-sharing-button__link" 
                     href="https://twitter.com/intent/tweet/?text=${sharing_subject}%0A%0D${current_url}" target="_blank" rel="noopener">
                     <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
