--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -48,7 +48,7 @@
                         <!--<td>${item.created}</td>-->
                         <td class="center">
                             <a href click.delegate="add_or_update(item)">
-                                <i class="far fa-pencil" title="Edit User Data" ></i>
+                                <i class="fas fa-pencil" title="Edit User Data" ></i>
                             </a>
                             <a href click.delegate="unlock_user(item.id)" show.bind="item.status=='Unconfirmed'">
                                 <i class="far fa-unlock" title="Unlock User" ></i>
