--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -132,7 +132,7 @@
                         class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
                     </button>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
-                        <i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
+                        <i if.bind="user.privileges.EDITOR" class="fas fa-pencil is-link" style="font-size:0.6em;" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
                         ${story_0.name}
                     </h3>
                     <div class="member-story-panel ${theme.rtltr}" style="border-left:solid 2px darkgray;height:82%" ref="life_summary_content">
@@ -150,7 +150,6 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
-                            <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_1, 'edit')">&nbsp;</i>-->
                             <span class="name" innerhtml.bind="story_1.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
@@ -163,7 +162,6 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_2)">
                     <div class="member-story-header" show.bind="story_2.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
-                            <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_2, 'edit')">&nbsp;</i>-->
                             <span class="name" innerhtml.bind="story_2.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
@@ -176,7 +174,6 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-sm hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_3)">
                     <div class="member-story-header" show.bind="story_3.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
                         <h4 dir="rtl">
-                            <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_3, 'edit')">&nbsp;</i>-->
                             <span class="name" innerhtml.bind="story_3.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
@@ -189,7 +186,6 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-md hidden-sm hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_4)">
                     <div class="member-story-header" show.bind="story_4.story_text != ''" aubs-tooltip="text.bind:to_story_page">
                         <h4 dir="rtl">
-                            <!--<i if.bind="user.privileges.EDITOR" class="far fa-pencil is-link" t="[title]stories.edit" click.trigger="zoom_out(story_4, 'edit')">&nbsp;</i>-->
                             <span class="name" innerhtml.bind="story_4.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
