--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -22,7 +22,7 @@
                         <span style="font-weight:bold;">${msg.timestamp}: ${msg.sender_name}
                             <span if.bind="user.privileges.CHAT_MODERATOR"
                                 style="float:left;margin-left:30px;cursor:pointer;">
-                                <i class="far fa-pencil" click.delegate="edit_message(msg, $index)"></i>
+                                <i class="fas fa-pencil" click.delegate="edit_message(msg, $index)"></i>
                                 <i class="fa fa-trash" click.delegate="delete_message(msg, $index)"></i>
                             </span>
                         </span><br />
