set empty mailto. wait for title override

--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -97,7 +97,7 @@
             </li>
             <li>
                 <!-- Sharingbutton E-Mail -->
-                <a class="resp-sharing-button__link" href="mailto:someone@gmail.com?subject=${sharing_subject}&body=${current_url}" target="_self" rel="noopener">
+                <a class="resp-sharing-button__link" href="mailto:?subject=${sharing_subject}&body=${current_url}" target="_self" rel="noopener">
                     <i class="far fa-envelope"></i>&nbsp;&nbsp;Mail
                 </a>
             </li>
