start causes troubles

--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -91,13 +91,13 @@
             <li style="border-bottom:solid 1px gray;">
                     <!-- Sharingbutton Twitter -->
                  <a class="resp-sharing-button__link" 
-                    href="https://twitter.com/intent/tweet/?text=${sharing_subject}%0A%0D${current_url}" target="_blank" rel="noopener">
+                    href="https://twitter.com/intent/tweet/?text=${sharing_subject}%0A%0D&amp;url=${current_url4mail}" target="_blank" rel="noopener">
                     <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
                 </a>
             </li>
             <li>
                 <!-- Sharingbutton E-Mail -->
-                <a class="resp-sharing-button__link" href="mailto:?subject=${sharing_subject}&body=${link_to_current_url}" target="_blank" rel="noopener">
+                <a class="resp-sharing-button__link" href="mailto:?subject=${sharing_subject}&body=${current_url4mail}" target="_blank" rel="noopener">
                     <i class="far fa-envelope"></i>&nbsp;&nbsp;Mail
                 </a>
             </li>
