--- a/src/members/members.html
+++ b/src/members/members.html
@@ -45,7 +45,9 @@
                 </div>
             </div>
 
-            <div id="member-list" class="member-list content-area" css="min-height:${theme.min_height-320}px;max-height:590px;">
+            <div id="member-list" class="member-list content-area unselectable" 
+                css="min-height:${theme.min_height-320}px;max-height:590px;"
+                ref="scroll_area">
                 <ul class="list-group">
                     <li repeat.for="member of members | filter : filter : '*selected' : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : max_members_displayed | filtervisibility : 0 "
                         if.bind="! user.privileges.DATA_AUDITOR || ! only_unapproved || !member.approved"
