--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -35,6 +35,13 @@
                         name-changed.delegate="dic_item_changed($event)" place_holder_text="user.enter-text-to-replace">
                     </multi-select>
                 </div>
+                <div class="row">
+                    <h3>${'user.config' & t}</h3>
+                    <button repeat.for="uf of auto_reg_options" style="margin-left:8px"
+                        class="btn btn-${uf==auto_reg_option ? 'primary' : 'default'}" click.delegate="auto_reg_option_selected(uf)">
+                        <span style="font-weight:bolder">${uf & t}</span>
+                    </button>
+                </div>
             </div>
         </ux-dialog-body>
         <!-- <ux-dialog-footer>
