--- a/src/resources/elements/Quiz.html
+++ b/src/resources/elements/Quiz.html
@@ -12,12 +12,13 @@
                 <div class="btn-group dropdown border-right" style="padding:0;margin-right:18px;"
                     aubs-dropdown="auto-close.bind: autoClose; is-open.bind: question.is_open; on-toggle.call: q_toggled(question, $event)">
                     <button class="btn btn-link btn-md dropdown-toggle" if.bind="!question.editing_mode"
-                        style="text-decoration:none;position:relative;margin-bottom:10px;" aubs-dropdown-toggle>
-                        <span>
-                            <i if.bind="q_state=='editing-q'" class="fas fa-sm fa-pencil"
+                        style="text-decoration:none;position:relative;margin-bottom:10px;width:100%;" aubs-dropdown-toggle>
+                        <span style="float:right;display:flex;width:100%;">
+                            <i if.bind="q_state==EDITING" class="fas fa-sm fa-pencil"
                                 click.trigger="edit_question(question)"></i>
                             ${question.question || 'members.new-question' & t}
                         </span>
+                        <span class="caret"></span>
                     </button>
                     <input if.bind="question.editing_mode" type="text" value.bind="question.question"
                         t="[placeholder]members.enter-question" blur.trigger="question.editing_mode=false"
@@ -25,7 +26,7 @@
                     <ul class="dropdown-menu dropdown-menu-right" style="margin-right:100px;">
                         <li repeat.for="answer of question.answers">
                             <div style="display:flex">
-                                <i if.bind="q_state=='editing-q' && ! answer.editing_mode" class="fas fa-sm fa-pencil"
+                                <i if.bind="q_state==EDITING && ! answer.editing_mode" class="fas fa-sm fa-pencil"
                                     style="float:right" click.trigger="edit_answer(answer)">
                                 </i>
                                 <a if.bind="! answer.editing_mode"
